# web-server-demo

./: .gitignore  Cargo.toml  Procfile  tweets.db
.cargo/: config.toml
src/: api.rs  main.rs
src/api/: auth.rs  db.rs  tests.rs
templates/: base.html.tera  dashboard.html.tera  home.html.tera  post.html  tweets.html
