[package]
authors = ["Arif Driessen <arifd86@gmail.com>"]
edition = "2018"
name = "Cwitter"
version = "0.1.0"

[dependencies]
once_cell = "1.8.0"
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
tide = "0.16.0"

[dependencies.async-std]
features = ["attributes"]
version = "1.8.0"

[dependencies.rusqlite]
features = ["bundled"]
version = "0.25.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"
