[package]
authors = ["Arif Driessen <arifd86@gmail.com>"]
edition = "2018"
name = "Cwitter"
version = "0.1.0"

[dependencies]
once_cell = "1.8.0"

r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"

rocket = "0.5.0-rc.1"

[dependencies.rusqlite]
features = ["bundled"]
version = "0.25.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"
