[package]
authors = ["Arif Driessen <arifd86@gmail.com>"]
edition = "2018"
name = "cwitter"
version = "0.1.0"

[dependencies]
# MISC
anyhow = "1"
once_cell = "1"
serde = "1"
serde_json = "1"
rand = "0.8.4"

# HTML TEMPLATING
tera = "1"

# PASSWORD HASHING/SALTING
rust-argon2 = "0.8.3"

# WEB SERVER
rocket = { version = "0.5.0-rc.1", features = ["json"] }

# DATABASE MANAGEMENT
# r2d2_sqlite = "0.18.0"
# r2d2 = { version = "0.8.9" } 
rusqlite = { version = "0.25.1", features = ["bundled"] }

# AUTHENTICATION
jsonwebtoken = "7"